2009-05-06  Kevin McCullough  <kmccullough@apple.com>

        -Clarified a comment

        * editing/InsertParagraphSeparatorCommand.cpp:
        (WebCore::InsertParagraphSeparatorCommand::doApply):

2009-05-06  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Not reviewed. Fix WML enabled builds by including "MappedAttribute.h" in several places.

        * wml/WMLAElement.cpp:
        * wml/WMLAccessElement.cpp:
        * wml/WMLBRElement.cpp:
        * wml/WMLCardElement.cpp:
        * wml/WMLDoElement.cpp:
        * wml/WMLElement.cpp:
        * wml/WMLFieldSetElement.cpp:
        * wml/WMLGoElement.cpp:
        * wml/WMLImageElement.cpp:
        * wml/WMLInputElement.cpp:
        * wml/WMLMetaElement.cpp:
        * wml/WMLOnEventElement.cpp:
        * wml/WMLOptGroupElement.cpp:
        * wml/WMLOptionElement.cpp:
        * wml/WMLPElement.cpp:
        * wml/WMLPostfieldElement.cpp:
        * wml/WMLSetvarElement.cpp:
        * wml/WMLTableElement.cpp:
        * wml/WMLTemplateElement.cpp:
        * wml/WMLTimerElement.cpp:

2009-05-06  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        https://bugs.webkit.org/show_bug.cgi?id=25526
        [Gtk] Additional support is needed for caret browsing

        Emit AtkText::text-selection-changed when the selection changes
        and the current selection is of Range (ie, the start and end
        positions are different) type. This seems to match what Gecko
        does.

        * editing/gtk/SelectionControllerGtk.cpp:
        (WebCore::SelectionController::notifyAccessibilityForSelectionChange):

2009-05-05  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        https://bugs.webkit.org/show_bug.cgi?id=25526
        [Gtk] Additional support is needed for caret browsing

        Emit AtkText::text-caret-moved when selection changes.

        * GNUmakefile.am:
        * editing/SelectionController.h: