@@ -1,3 +1,12 @@
+2009-05-06  David Levin  <levin@chromium.org>
+
+        Reviewed by Dimitri Glazkov.
+
+        https://bugs.webkit.org/show_bug.cgi?id=25588
+        Adding the custom v8 bindings Document.location.
+
+        * bindings/v8/custom/V8DocumentLocationCustom.cpp: Added.
+
 2009-05-06  Kevin McCullough  <kmccullough@apple.com>
 
         -Clarified a comment
